# dns

./: CMakeLists.txt  main.cpp  tests.hpp
docs/: principle.md  protocol.md
lib/: BlockingQueue.hpp  Bytes.hpp  Log.cpp  Log.h  bytes.cpp
net/: DnsChannel.cpp  DnsChannel.h  net.cpp  net.h  udp.cpp  udp.h
protocol/: Dns.cpp  Dns.h  Layer.cpp  Layer.h  Packet.cpp  Packet.h  base36.cpp  base36.h  errorcode.h
tests/: diffProblem.h  packetTest.cpp  packetTest.h  test1.hpp
